# Game-Jam-001

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/aseprite/: main_menu_gun.aseprite  main_menu_start.aseprite  main_menu_start_new.aseprite  start_button.aseprite  start_button_off.aseprite
assets/shaders/: bloom_final.frag  gaussian_blur.frag
src/: bullet_killer.cpp  bullet_killer.h  common.h  main.cpp
src/animation/: animation_system.cpp  animation_system.h  node_interface.cpp  node_interface.h  node_interpolates.h  node_type.h
src/application/: application.cpp  application.h
src/event/: event.h
src/object_manager/: components.h  object_allocator.h  object_bullet.cpp  object_bullet.h  object_button.cpp  object_button.h  object_enemy.cpp  object_enemy.h  object_itf.h  object_mgr.cpp  object_mgr.h  object_npc.cpp  object_npc.h  object_person.cpp  object_person.h  object_player.cpp  object_player.h  object_room.cpp  object_room.h  object_text.cpp  object_text.h  object_ui.cpp  object_ui.h
src/object_manager/bullets/: object_exploder_bullet.h
src/object_manager/deprecated/: object_bullet.cpp  object_bullet.h  object_itf.h
src/scene/: ecs_scene.cpp  ecs_scene.h  main_menu_scene.cpp  main_menu_scene.h  scene.cpp  scene.h  test_scene.cpp  test_scene.h
src/systems/: bullet_system.cpp  bullet_system.h  enemy_system.cpp  enemy_system.h  hover_system.cpp  hover_system.h  physics_system.cpp  physics_system.h  room_system.cpp  room_system.h  system.h
src/systems/deprecated/: bullet_system.cpp  bullet_system.h  hover_system.cpp  room_system.cpp
src/utility/: no_copy.h  state.h
